[tool.poetry]
name = "spotify_data"
version = "0.1.0"
description = "building spotify recommender - 10% time"
authors = ["Rob Kelly <robertkelly234@gmail.co.uk>"]
readme = "README.md"
documentation = "url-to-documentation"

[tool.poetry.dependencies]
python = "~3.10"
pandas = "^2.0"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
spotipy = "~2.22.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3"
ipykernel = "^6.23.2"
jupyter = "^1.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
run = "src/main.py"